# CW_Django

./: .env.sample.txt  README.md  groups.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_list.html
config/: settings.py  urls.py
newletter/: apps.py
newletter/migrations/: 0001_initial.py
newsletter/: admin.py  apps.py  forms.py  models.py  servises.py  urls.py  views.py
newsletter/management/commands/: runapscheduler.py
newsletter/migrations/: 0001_initial.py  0002_alter_mailing_options.py  0003_alter_client_options_alter_message_options.py
newsletter/templates/newsletter/: attempt_list.html  client_confirm_delete.html  client_detail.html  client_list.html  constructor.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_list.html
newsletter/templates/newsletter/includes/: inc_menu.html
static/css/: style.css
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py  0004_alter_user_options.py
users/templates/: login.html  user_detail.html  user_update.html
users/templates/users/: password_reset.html  user_form.html  user_list.html
